@@ -2,6 +2,7 @@
 
 	* Ensure compatibility with TYPO3 v10, resolves #108
 	* Allow SQL functions in valueField and referenceField properties, resolves #114
+	* Use TYPO3 random functions for generating temporary keys, resolves #123
 
 2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
